- Added imap_savebody() that allows message body to be written to a file.
  (Mike)
- Fixed issue with iconv_mime_decode where the "encoding" would only allow
  upper case specifiers. (Derick)
- Fixed tiger hash algorithm generating wrong results on big endian platforms.
  (Mike)
- Fixed crash with DOMImplementation::createDocumentType("name:"). (Mike)
- Fixed bug #36606 (pg_query_params() changes arguments type to string). (Tony)
- Fixed bug #36599 (DATE_W3C format constant incorrect). (Derick)
- Fixed bug #36575 (SOAP: Incorrect complex type instantiation with
  hierarchies). (Dmitry)
- Fixed bug #36510 (strtotime() fails to parse date strings with tabs). (Ilia,
  Derick)
- Fixed bug #36459 (Incorrect adding PHPSESSID to links, which contains \r\n).
  (Ilia)
- Fixed bug #36458 (sleep() accepts negative values). (Ilia)
- Fixed bug #36436 (DBA problem with Berkeley DB4). (Marcus)
- Fixed bug #36434 (Improper resolution of declaring class name of an inherited
  property). (Ilia)
- Fixed bug #36420 (segfault when access result->num_rows after calling 
  result->close()). (Ilia,Tony)
- Fixed bug #36403 (oci_execute() no longer supports OCI_DESCRIBE_ONLY). 
  (Tony)
- Fixed bug #36400 (Custom 5xx error does not return correct HTTP response 
  error code). (Tony)
- Fixed bug #36396 (strtotime() fails to parse dates in dd-mm-yyyy format).
  (Derick)
- Fixed bug #36345 (PDO/MySQL problem loading BLOB over 1MB). (Ilia)
- Fixed bug #36388 (ext/soap crashes when throwing exception and session
  persistence). (David)
- Fixed bug #36382 (PDO/PgSQL's getColumnMeta() crashes). (Derick)
- Fixed bug #36359 (splFileObject::fwrite() doesn't write when no data length 
  specified). (Tony)
- Fixed bug #36351 (parse_url() does not parse numeric paths properly). (Ilia)
- Fixed bug #36337 (ReflectionProperty fails to return correct visibility). 
  (Ilia)
- Fixed bug #36334 (Added missing documentation about realpath cache INI 
  settings). (Ilia)